change table to div, replace percents to EM

--- a/about.html
+++ b/about.html
@@ -71,7 +71,7 @@ and open the template in the editor.
 						<div class="cooker-portrait">
 							<img class="cooker-portrait-image" src="css/images/cooker_portrait2.png" />
 							<div class="cooker-intro">
-								<div><img class="cooker-cap-icon" /></div>
+								<div><img class="cooker-cap-icon" src="css/images/cap_icon.png" /></div>
 								<div class="cooker-intro-text">Suspendisse dapibus tum leo malesuada  facilisis</div>
 							</div>
 						</div>
@@ -91,7 +91,7 @@ and open the template in the editor.
 						<div class="cooker-portrait">
 							<img class="cooker-portrait-image" src="css/images/cooker_portrait3.png" />
 							<div class="cooker-intro">
-								<div><img class="cooker-cap-icon" /></div>
+								<div><img class="cooker-cap-icon" src="css/images/cap_icon.png" /></div>
 								<div class="cooker-intro-text">Suspendisse</div>
 							</div>
 						</div>
@@ -111,7 +111,7 @@ and open the template in the editor.
 						<div class="cooker-portrait">
 							<img class="cooker-portrait-image" src="css/images/cooker_portrait4.png" />
 							<div class="cooker-intro">
-								<div><img class="cooker-cap-icon" /></div>
+								<div><img class="cooker-cap-icon" src="css/images/cap_icon.png" /></div>
 								<div class="cooker-intro-text">Suspendisse dapibus</div>
 							</div>
 						</div>
