--- a/footer.html
+++ b/footer.html
@@ -4,22 +4,12 @@ To change this license header, choose License Headers in Project Properties.
 To change this template file, choose Tools | Templates
 and open the template in the editor.
 -->
-<table id="footer">
-	<tr class="header-row">
-		<th class="about">
+<div class="footer-blocks">
+	<div class="footer-block">
+		<div class="footer-block-header">
 			About Us
-		</th>
-		<th></th>
-		<th class="latest-news">
-			Latest News
-		</th>
-		<th><br/><br/><br/></th>
-		<th class="sign-up">
-			Sign Up For Our Newsletter <br/> And get a free dinner for two!
-		</th>
-	</tr>
-	<tr>
-		<td class="about-us-block">
+		</div>
+		<div class="footer-block-cont about-us-block">
 			<div class='info-block'>
 				Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse dapibus tum leo malesuada  facilisis.
 			</div>
@@ -41,10 +31,15 @@ and open the template in the editor.
 				Lunch: 12.00 - 14.00 (Monday to Friday)<br/>
 				Dinner: 18.00 - 22.30
 			</div>
-		</td>
-		<td class="vert-line">
-		</td>
-		<td class="latest-news-block">
+		</div>
+	</div>
+	<div class="vert-line">
+	</div>
+	<div class="footer-block">
+		<div class="footer-block-header">
+			Latest News
+		</div>
+		<div class="footer-block-cont latest-news-block">
 			<div class="latest-news-item">
 				<div class="news-image"><img src="css/images/news_icon.png" /></div>
 				<div class="news-content">
@@ -73,19 +68,25 @@ and open the template in the editor.
 					<div class="news-text">Integer imperdiet maximus odio, quis volutpat ipsum hendrerit vitae.</div>
 				</div>
 			</div>
-		</td>
-		<td class="vert-line">
-		</td>
-		<td class="sign-up-block">
+		</div>
+	</div>
+	<div class="vert-line">
+	</div>
+	<div class="footer-block">
+		<div class="footer-block-header">
+			Sign Up For Our Newsletter <br/> And get a free dinner for two!
+		</div>
+		<div class="footer-block-cont sign-up-block">
 			<div><input class="sign-up-field" type="text" placeholder="Name*"></div>
 			<div><input class="sign-up-field" type="text" placeholder="Email*"></div>
 			<div><div class="sign-up-button">Sign Me Up</div></div>
 			<div class="login-header">Login</div>
 			<div><div class="sign-up-button">Login</div></div>
-		</td>
-	</tr>	
-</table>
-<div id="copyright">
+		</div>
+	</div>
+</div>
+
+<div class="copyright">
 	&copy; copyright 2016 DigitalWorld. Design by Ali Rizvi.
 	<img class="share-button " src="css/images/share_youtube.png" />
 	<img class="share-button " src="css/images/share_google.png"  />
