--- a/index.html
+++ b/index.html
@@ -41,19 +41,18 @@ and open the template in the editor.
 						<li page="contact">Contact</li>
 					</ul>
 				</div>
-				<table class="intro">
-					<tbody>
-						<tr class="spacing2"><td></td></tr>
-						<tr class="restaurant-name"><td>Restaurant</td></tr>
-						<tr class="intro-header"><td>Enjoy our traditional Italian kitchen</td></tr>
-						<tr class="intro-description"><td>Aenean ultricies mi vitae est. Mauris placerat eleifend leo. Quisque sit amet est et sapien ullamcorper pharetra.</td></tr>
-						<tr class="intro-href"><td><div class="learn-more-button">Learn More</div></td></tr>
-					</tbody>
-				</table>
+				<div class="intro">
+					<div class="intro-content">
+						<div class="restaurant-name">Restaurant</div>
+						<div class="intro-header"><td>Enjoy our traditional Italian kitchen</div>
+						<div class="intro-description"><td>Aenean ultricies mi vitae est. Mauris placerat eleifend leo. Quisque sit amet est et sapien ullamcorper pharetra.</div>
+					</div>
+				</div>
+				<div class="intro-href"><div class="learn-more-button">Learn More</div></div>
 			</div>
 		</div>
-		<table class="lunch-dinner">
-		</table>
+		<div class="lunch-dinner">
+		</div>
 		<div class="reservations-block"></div>
 		<div class="footer"></div>
 	</body>
