--- a/lunchdinner_block.html
+++ b/lunchdinner_block.html
@@ -5,63 +5,58 @@ To change this template file, choose Tools | Templates
 and open the template in the editor.
 -->
 
-<tbody>
-	<tr>
-		<td colspan="4" class="headings">
-			<div class="heading1">Lunch & Dinner</div>
-			<div class="headingspace"></div>
-			<div class="heading2">Opening Hours</div>
-			<div class="heading3">Our restaurant is open</div>
-		</td>
-	</tr>
-	<tr>
-		<td class="hspace10"></td>
-		<td class="hours-info hours-info1">
-			<div>
-				<div class="image">
-				</div>
-				<div class="textinfo-container">
-					<div class="icon"></div>
-					<div class="textinfo">
-						<div class="hours-header">
-							Lunch & Dinner
-						</div>
-						<div class="description">
-							Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Integer posuere erat. Pellentesque ornare sem lacinia quam.
-							Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Integer posuere erat. Pellentesque ornare sem lacinia quam.
-						</div>
-						<div class="description">
-							<img class="gabel-icon" src="css/images/gabel.png" />Lorem ipsum dolor sit amet, consectetur
-						</div>
-						<div class="description">
-							<img class="timer-icon" src="css/images/timer.png" />Lunch: 12.00 - 14.00 (Monday to Friday)<br/>Dinner: 18.00 - 22.30
-						</div>
+<div class="headings">
+	<div class="heading1">Lunch & Dinner</div>
+	<div class="headingspace"></div>
+	<div class="heading2">Opening Hours</div>
+	<div class="heading3">Our restaurant is open</div>
+</div>
+<div class="hours-info">
+	<div class="hours-info1">
+		<div>
+			<div class="image">
+			</div>
+			<div class="textinfo-container">
+				<div class="icon"></div>
+				<div class="textinfo">
+					<div class="hours-header">
+						Lunch & Dinner
+					</div>
+					<div class="description">
+						Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Integer posuere erat. Pellentesque ornare sem lacinia quam.
+						Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Integer posuere erat. Pellentesque ornare sem lacinia quam.
+					</div>
+					<div class="description">
+						<img class="gabel-icon" src="css/images/gabel.png" />Lorem ipsum dolor sit amet, consectetur
+					</div>
+					<div class="description">
+						<img class="timer-icon" src="css/images/timer.png" />Lunch: 12.00 - 14.00 (Monday to Friday)<br/>Dinner: 18.00 - 22.30
 					</div>
 				</div>
 			</div>
-		</td>
-		<td class="hours-info hours-info2">
-			<div>
-				<div class="image">
-				</div>
-				<div class="textinfo-container">
-					<div class="icon"></div>
-					<div class="textinfo">
-						<div class="hours-header">
-							Parties and Meetings
-						</div>
-						<div class="description">
-							Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Integer posuere erat. Pellentesque ornare sem lacinia quam.
-						</div>
-						<div class="description">
-							<img class="gabel-icon" src="css/images/gabel.png" />Lorem ipsum dolor sit amet, consectetur
-						</div>
-						<div class="description">
-							<img class="timer-icon" src="css/images/timer.png" />Lunch: 12.00 - 14.00 (Monday to Friday)<br/>Dinner: 18.00 - 22.30
-						</div>
+		</div>
+	</div>
+	<div class="hours-info2">
+		<div>
+			<div class="image">
+			</div>
+			<div class="textinfo-container">
+				<div class="icon"></div>
+				<div class="textinfo">
+					<div class="hours-header">
+						Parties and Meetings
+					</div>
+					<div class="description">
+						Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Integer posuere erat. Pellentesque ornare sem lacinia quam.
+					</div>
+					<div class="description">
+						<img class="gabel-icon" src="css/images/gabel.png" />Lorem ipsum dolor sit amet, consectetur
+					</div>
+					<div class="description">
+						<img class="timer-icon" src="css/images/timer.png" />Lunch: 12.00 - 14.00 (Monday to Friday)<br/>Dinner: 18.00 - 22.30
 					</div>
 				</div>
 			</div>
-		</td>
-		<td class="hspace10"></td>
-	</tbody>
+		</div>
+	</div>
+</div>
